new view utf8 support, etc

--- a/views/loli_paste/create.html
+++ b/views/loli_paste/create.html
@@ -5,7 +5,9 @@
   </p>
   <p>
     <label>Language</label><br />
-    <input type="text" name="lang" />
+    <select name="lang">
+      $options
+    </select>
   </p>
   <p>
     <label>Code</label> <br />
