--- a/views/loli_paste/layout.html
+++ b/views/loli_paste/layout.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
-   "http://www.w3.org/TR/html4/strict.dtd">
-
 <html>
 <head>
   <!-- Framework CSS -->
@@ -8,7 +5,9 @@
   <link rel="stylesheet" href="/css/blueprint/print.css" type="text/css" media="print">
   <!--[if lt IE 8]><link rel="stylesheet" href="../blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
   
+    <link rel="stylesheet" href="/css/hk-espressso.css" type="text/css">
     <link rel="stylesheet" href="/css/custom.css" type="text/css">
+    
 </head>
 
 <body>
@@ -17,10 +16,12 @@
   <br />
   <br />
   <br />
-  <div id="create"><h1><a href="/">Loli paste</a></h1></div>
+  <div class="prepend-4 span-12 last">
+    <div id="create"><h1><a href="/">Loli paste</a></h1></div>
+  </div>
   
   <hr />
-  <div class="span-20">
+  <div class="prepend-4 span-14">
     <br />
     $content
   </div>
