--- a/views/loli_paste/layout.html
+++ b/views/loli_paste/layout.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
 <html>
 <head>
   <!-- Framework CSS -->
@@ -21,7 +24,7 @@
   </div>
   
   <hr />
-  <div class="prepend-4 span-14">
+  <div class="prepend-4 span-13 colborder">
     <br />
     $content
   </div>
