--- a/views/loli_paste/layout.html
+++ b/views/loli_paste/layout.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/blueprint/print.css" type="text/css" media="print">
   <!--[if lt IE 8]><link rel="stylesheet" href="../blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
   
-    <link rel="stylesheet" href="/css/hk-espressso.css" type="text/css">
+    <link rel="stylesheet" href="/css/hk-pyg.css" type="text/css">
     <link rel="stylesheet" href="/css/custom.css" type="text/css">
     
 </head>
