--- a/views/loli_paste/layout.html
+++ b/views/loli_paste/layout.html
@@ -20,18 +20,22 @@
   <br />
   <br />
   <div class="prepend-4 span-12 last">
-    <div id="create"><h1><a href="/">Loli paste</a></h1></div>
+    <div id="banner"><h1><a href="/">Loli paste</a></h1></div>
   </div>
   
   <hr />
-  <div class="prepend-4 span-13 colborder">
+  <div class="prepend-4 span-14">
     <br />
     $content
   </div>
   
   
   <div class="span-4 last" id="sidebar">
-    <h2><a href="/create">Create</a></h2>
+    <div id="create">
+      <a href="/create">
+        <img src="/css/image/huluwa_create.jpg" alt="Create" />
+      </a>
+    </div>
   </div>
   
   </div>
