--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,28 +3,37 @@ h1 a, h2 a{
 }
 
 textarea {
-  width: 100%;
+  width: 90%;
 }
 
 /* highlight */
 
-/*
-table.sourceCode {
+
+pre code{
+  border: 0;
+}
+
+pre, pre code {
+   background:white;
+}
+
+pre {
+  border-left: 5px solid #eee;
+/*  padding-left: 15px; */
+  border-right: 0;
+}
+
+
+pre.sourceCode {
   border-top: 1px solid #eee;
   padding-top: 20px;
   padding-bottom: 20px;
   margin-bottom: 20px;
   border-bottom:  1px solid #eee;
   border-left: 5px solid #eee;
-  border-right: 0;
-  width: 530px;
+  border-right:0 0;
+  padding-left: 20px;
 }
-
-
-td.lineNumbers { 
-  display: none;
-}
-*/
 
 
 /*
@@ -36,3 +45,15 @@ pre code {
 pre code br {
   display: none;
 }
+
+#create img{
+  border: 1px #aaa solid;
+  padding: 5px;
+}
+
+.container 	{ border-top: 3px #5083AE solid }
+
+a { color: #141517; }
+a:hover			{ color: #141517; }
+
+h2, h2 a, h3, h3 a, h4, h4 a { color: #04427B; }
