use css style img background

--- a/views/loli_paste/layout.html
+++ b/views/loli_paste/layout.html
@@ -32,8 +32,8 @@
   
   <div class="span-4 last" id="sidebar">
     <div id="create">
-      <a href="/create">
-        <img src="/css/image/huluwa_create.jpg" alt="Create" />
+      <a href="/create" class="create">
+        <h2>Create</h2>
       </a>
     </div>
   </div>
