--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -33,6 +33,7 @@ pre.sourceCode {
   border-left: 5px solid #eee;
   border-right:0 0;
   padding-left: 20px;
+  width: 520px;
 }
 
 
@@ -46,14 +47,26 @@ pre code br {
   display: none;
 }
 
-#create img{
-  border: 1px #aaa solid;
-  padding: 5px;
-}
-
 .container 	{ border-top: 3px #5083AE solid }
 
 a { color: #141517; }
 a:hover			{ color: #141517; }
 
 h2, h2 a, h3, h3 a, h4, h4 a { color: #04427B; }
+
+
+#create {
+  width: 200px;
+  border: 1px #aaa solid;
+  padding: 5px;
+}
+#create a {
+  background: #fff url(/css/image/huluwa_create.jpg) no-repeat;
+  display: block;
+  weidth: 200px;
+  height: 161px;
+}
+
+#create a h2{
+  display: none;
+}
