--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -47,7 +47,7 @@ pre code br {
   display: none;
 }
 
-.container 	{ border-top: 3px #5083AE solid }
+/* .container 	{ border-top: 3px #5083AE solid } */
 
 a { color: #141517; }
 a:hover			{ color: #141517; }
