--- a/views/loli_paste/layout.html
+++ b/views/loli_paste/layout.html
@@ -15,16 +15,19 @@
 
 <body>
   
+  <br />
+  <br />
+  <br />
   <div class="container">
-  <br />
-  <br />
-  <br />
-  <div class="prepend-4 span-12 last">
+  <div class="prepend-3 span-12 last">
     <div id="banner"><h1><a href="/">Loli paste</a></h1></div>
+  </div>
   </div>
   
   <hr />
-  <div class="prepend-4 span-14">
+  
+  <div class="container">
+  <div class="prepend-3 span-14">
     <br />
     $content
   </div>
