--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -61,7 +61,7 @@ h2, h2 a, h3, h3 a, h4, h4 a { color: #04427B; }
   padding: 5px;
 }
 #create a {
-  background: #fff url(/css/image/huluwa_create.jpg) no-repeat;
+  background: #fff url(/css/image/ita.jpg) no-repeat;
   display: block;
   weidth: 200px;
   height: 161px;
